<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.infomemo.MainActivity" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:text="@string/t_fileName" />

    <Button
        android:id="@+id/saveB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/et_etc"
        android:onClick="dataSave"
        android:text="@string/b_save" />

    <EditText
        android:id="@+id/et_etc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saveB"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/deho" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_etc"
        android:layout_alignLeft="@+id/fileList"
        android:layout_marginLeft="7dp"
        android:text="@string/t_etc" />

    <ListView
        android:id="@+id/fileList"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="12dp" >
    </ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/t_gps" />

    <ListView
        android:id="@+id/wifi"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="9dp" >
    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wifi"
        android:layout_below="@+id/et_filename"
        android:layout_marginTop="43dp"
        android:text="@string/t_wifi" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_filename"
        android:layout_below="@+id/et_filename"
        android:text="@string/t_day" />

    <EditText
        android:id="@+id/et_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="text"
        android:text="@string/deho" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:text="@string/deho" />

</RelativeLayout>
